# wasm-workflow-poc

./: .gitignore  LICENSE  README.md  add_100.wasm  add_100.wat  main100.wat  sum_of_2_ints.wasm  sum_of_2_ints.wat
scripts/: run_runner_server.sh  run_web_client.sh  run_workflow_manager_cli.sh
wasm_executor/: Cargo.toml  README.md
wasm_executor/crates/wasm_executor/: Cargo.toml
wasm_executor/crates/wasm_executor/src/: lib.rs
wasm_executor/crates/web_server/: Cargo.toml
wasm_executor/crates/web_server/src/: main.rs
wasm_executor/crates/web_server/src/routes/: mod.rs
wasm_executor/crates/workflow_manager/: Cargo.toml  README.md
wasm_executor/crates/workflow_manager/src/: exampleWorkflowNodes.json  main.rs  workflow_coordinator.rs  workflow_json_parser.rs
web_client/: package-lock.json  package.json
web_client/src/: App.test.tsx
web_client/src/App/: App.css  App.tsx
web_client/src/App/WorkflowNodes/: WorkflowNodes.components.ts  WorkflowNodes.tsx  index.ts  types.ts
