[package]
name = "workflow_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { veersion = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm_executor = { path = "../wasm_executor", version = "*" }
tokio = { version = "*", features = ["full"] }
